[-] fix overflow bug

--- a/css/markdown.css
+++ b/css/markdown.css
@@ -32,6 +32,10 @@
 	font-size: 23px;	
 }
 
+.preview img {
+	max-width: 95%;
+	overflow: hidden;
+}
 
 
 .edit .cm-atom,
